# screenshot_mcp

./: PRD.md  README.md  app.py  call_tool.py  check_server.sh  config.py  exceptions.py  get_tools.sh  grok  handlers.py  main.py  manual_log.txt  manual_log2.txt  manual_screenshot.py  mcp_code_report.md  mcp_fix_plan.md  mcp_server_plan.md  models.py  pyproject.toml  registry.py  run_server.sh  screenshot.py.bak  server.py  server_log.txt  server_pid.txt  state.py  task.md  tasks.md  test_http_mcp.py  test_mcp.py  test_mcp_client.py  test_screenshot.py  test_screenshot_xai.py  test_xai.py  utils.py
.grok/: GROK.md  settings.json
plans/: PRD2.md
utils/: __init__.py  image_processor.py  logger.py  metrics.py  rate_limiter.py  screenshot.py  temp_manager.py
